--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
     <style>
       body {
         font-family: 'Poppins', sans-serif;
@@ -22,7 +22,9 @@
     "react": "https://esm.sh/react@^19.1.0",
     "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
     "data": "https://esm.sh/data@^1.0.0",
-    "data/": "https://esm.sh/data@^1.0.0/"
+    "data/": "https://esm.sh/data@^1.0.0/",
+    "pako": "https://esm.sh/pako@^2.1.0",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.50.4"
   }
 }
 </script>
@@ -64,7 +66,6 @@
       }
     }
   </script>
-<link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-primary text-gray-200 font-body">
     <div id="root"></div>
