--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/TRXXEDSite/favicon.ico" />
+  <link rel="icon" href="/TRXXEDSite/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TRXXED</title>
   <script src="https://cdn.tailwindcss.com"></script>
